<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">SGI</string>

    <!-- Titles -->
    <string name="title_notification">Notification</string>
    <string name="title_main">Notification</string>
    <string name="title_chat">Notification</string>
    <string name="title_about">About</string>

    <!-- for Drawer Accessiblity -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>

    <!-- Menu actions -->
    <string name="action_settings">Setting</string>
    <string name="action_filter">Filter</string>
    <string name="action_logout">Logout</string>
    <string name="action_about">About</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_users">All Users</string>
    <string name="action_reset">Reset DB</string>
    <string name="action_refresh_notifications">Refresh Notifications</string>

    <!-- Form texts -->
    <string name="user_login">College Login Id</string>
    <string name="user_password">Password</string>
    <string name="sendMsg">Send</string>
    <string name="typeMsg">Type a Message</string>

    <!-- Toast Messages -->
    <string name="wrong_choice">Wrong Choice.. Try Again</string>

    <!-- Button -->
    <string name="load_next">&gt;</string>
    <string name="load_prev">&lt;</string>
    <string name="signin">LOGIN</string>

    <!-- user filter dialog buttons -->
    <string name="ok">OK</string>
    <string name="cancle">Cancle</string>

    <!-- Settings -->
    <string name="pref_cat_server">Server</string>
    <string name="pref_cat_general">General</string>

    <!-- Setting titles -->
    <string name="pref_title_pwd_change">Change Password</string>
    <string name="pref_title_server_ip">Server IP Address</string>
    <string name="pref_title_update_interval">Update Interval</string>
    <string name="pref_title_local_server">Local Server</string>

    <!-- Setting Desc -->
    <string name="pref_desc_pwd_change">Change your login password</string>
    <string name="pref_desc_server_ip">Server\'s IP Address (Developers only)</string>
    <string name="pref_desc_update_interval">How frequently you want updates</string>
    <string name="pref_desc_local_server">Use local server</string>

    <!-- Setting Desc -->
    <string name="pref_key_pwd_change">pwd_change</string>
    <string name="pref_key_server_ip">server_ip</string>
    <string name="pref_key_update_interval">update_interval</string>
    <string name="pref_key_local_server">use_local_server</string>

    <!-- Drawer text -->
    <string name="getMsg">Refresh</string>
    <string name="user_list">Users</string>
    <string name="start">Start</string>
    <string name="interaction">Interactions</string>
    <string name="password">Password</string>
    <string name="radio_student">Student</string>
    <string name="radio_faculty">Faculty</string>
    <string name="user_image_desc">Image of the user</string>
    <string name="userType">Select Type</string>
    <string name="attachments">Attachments</string>
    <string name="filter_title">Filter Users</string>
    <string name="year">Year</string>
    <string name="department">Department</string>

    <!-- Fragment titiles -->
    <string name="fragemnt_title_notification">Notifications</string>
    <string name="fragemnt_title_users">Add Users</string>
    <string name="fragemnt_title_contacts">Interactions</string>
    <string name="fragemnt_title_setting">Settings</string>
    <string name="fragemnt_title_new">Create Notice</string>
    <string name="all">All</string>
    <string name="filter_branch">Branch</string>
    <string name="filter_course">Course</string>
    <string name="filter_year">Year</string>
    <string name="nothing_found">Nothing Found !!</string>
    <string name="exit_warning">Press again to exit</string>
    <string name="no_internet">Connect to a network first!!</string>
    <string name="type_message">Remaining body here</string>
    <string name="type_subject">Subject here</string>

    <!-- Image Desc Acssesiblity -->
    <string name="desc_noti_state">State of Notification</string>
    <string name="desc_noti_sender_image">Photo of Sender</string>
    <string name="desc_noti_file_state">State of attachment</string>
    <string name="desc_noti_file_action_button">Action on Attachment</string>

    <!-- About content -->
    <string name="about_text">SGI Application is a project developed by Coding Mutants,\n the aims is to provide a interation and easy notifying platform for members of SGI.\n\n Developers are\nZeeshan Khan (zkhan1093@gmail.com) \nSwati Kesarwani (swati.1993cs@gmail.com)\n\n Feel free to give feedback and suggestions is any, Thank you.</string>
    <string name="about_title">Coding Mutants</string>
	<string name="about_appname">SGI Application</string>
	
    <!-- Arrays -->
    <string-array name="array_panel_options">
        <item>Notice Board</item>
        <item>Interactions</item>
        <item>Add Users</item>
    </string-array>
    <string-array name="array_panel_options_fact">
        <item>Notice Board</item>
        <item>Interactions</item>
        <item>Add Users</item>
        <item>Create Notice</item>
    </string-array>
    <string-array name="array_user_type">
        <item>Student</item>
        <item>Faculty</item>
    </string-array>
    <string-array name="array_state">
        <item>Offline</item>
        <item>Online</item>
    </string-array>
    <string-array name="array_year_4">
        <item>All</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>
    <string-array name="array_year_2">
        <item>All</item>
        <item>First</item>
        <item>Second</item>
    </string-array>
    <string-array name="array_year_3">
        <item>All</item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
    </string-array>
    <string-array name="array_department">
        <item>All</item>
        <item>CSE</item>
        <item>IT</item>
        <item>ME</item>
        <item>EE</item>
        <item>EC</item>
        <item>Civil</item>
    </string-array>

</resources>