<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.siet.secure.sgi.MainActivity" >

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout_white"
        android:orderInCategory="10"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_add_user_white"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings_white"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <!-- for development only -->
    <item
        android:id="@+id/action_reset"
        android:icon="@drawable/ic_action_settings_white"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never"/>

</menu>