<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/userMsg"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:ems="10"
        android:hint="@string/typeMsg"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMsg"
        android:text="@string/sendMsg" />

    <ScrollView
        android:id="@+id/scrollViewDisplayMsg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.97" >

        <TextView
            android:id="@+id/textViewDisplayMsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="getMsg"
        android:text="@string/getMsg" />

</LinearLayout>