<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.siet.secure.sgi.MainActivity$PlaceholderFragment" >

    
	
    <EditText
        android:id="@+id/editText_userid"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_login"
        android:ems="10" >
        <requestFocus />
    </EditText>
    
    <View
    	android:layout_marginTop="5dp"
    	android:layout_marginBottom="5dp"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	/>
    

    <EditText
        android:id="@+id/editText_userpassword"
		android:hint="@string/user_password"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:ems="10" >
        
    </EditText>
 <View
    	android:layout_marginTop="5dp"
    	android:layout_marginBottom="5dp"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	/>
	<TextView
        android:id="@+id/textView_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <Button
        android:id="@+id/button_signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:onClick="onClickButtonSignin" />

</LinearLayout>
